ollama/ollama-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama
  labels:
    app: ollama
spec:
  selector:
    matchLabels:
      name: ollama
  template:
    metadata:
      labels:
        name: ollama
    spec:
      containers:
        - name: ollama
          image: ollama/ollama:0.5.7
          ports:
            - name: http
              containerPort: 11434
              protocol: TCP
          volumeMounts:
            - mountPath: /root/.ollama
              name: ollama
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:main
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
      volumes:
        - name: ollama
          persistentVolumeClaim:
            claimName: ollama
      automountServiceAccountToken: false
