ollama/open-webui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: ollama
spec:
  selector:
    app: ollama
  ports:
    - name: http
      port: 8080
      targetPort: http
