ollama/ollama-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ollama
  name: ollama-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ollama.192.168.0.240.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ollama
            port:
              number: 11434
