ollama/open-webui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ollama
  name: open-webui-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: open-webui.192.168.0.240.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: open-webui
            port:
              name: http
